@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

package Model as ModelPackage <<Rectangle>> {

    ' --- Interfaces ---
    interface ReadOnlyAddressBook
    interface ReadOnlyUserPrefs
    interface Model

    ' --- Core model classes ---
    class ModelManager
    class AddressBook
    class UserPrefs

    ' --- Domain-level collections ---
    class UniqueAthleteList
    class UniqueOrganizationList
    class UniqueContractList

    ' --- Domain entities ---
    class Athlete
    class Organization
    class Contract
}

' --- Inheritance and interface implementation ---
AddressBook -|> ReadOnlyAddressBook
UserPrefs -|> ReadOnlyUserPrefs
ModelManager -|> Model

' --- Composition relationships ---
ModelManager *-- "1" AddressBook
ModelManager *-- "1" UserPrefs

AddressBook *-- "1" UniqueAthleteList
AddressBook *-- "1" UniqueOrganizationList
AddressBook *-- "1" UniqueContractList

UniqueAthleteList *-- "*" Athlete
UniqueOrganizationList *-- "*" Organization
UniqueContractList *-- "*" Contract

' --- Entity relationships ---
Contract --> "1" Athlete : references >
Contract --> "1" Organization : references >

' --- Filtered lists note (simplified for readability) ---
note right of ModelManager
  Maintains filtered ObservableLists:
  - filteredAthletes
  - filteredOrganizations
  - filteredContracts
end note

@enduml
